force-app/main/default/objects/HDT_DataEnrichmentTransocode__mdt/HDT_DataEnrichmentTransocode__mdt.object-meta.xml
<CustomObject>
    <label>Transcodifica Arricchimento Dati</label>
    <pluralLabel>Transcodifiche Arricchimento Dati</pluralLabel>
</CustomObject>