force-app/main/default/objects/HDT_DataEnrichmentTransocode__mdt/fields/IsTranscode__c.field-meta.xml
<CustomField>
    <fullName>IsTranscode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transcodifica</label>
    <type>Checkbox</type>
</CustomField>