force-app/main/default/objects/HDT_DataEnrichmentTransocode__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Metodo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>