force-app/main/default/objects/HDT_DataEnrichmentTransocode__mdt/listViews/Transcodifiche_Arricchimento_Dati.listView-meta.xml
<ListView>
    <fullName>Transcodifiche_Arricchimento_Dati</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SapField__c</columns>
    <columns>SfdcField__c</columns>
    <columns>IsNumber__c</columns>
    <columns>Precision__c</columns>
    <columns>IsTranscode__c</columns>
    <columns>Method__c</columns>
    <filterScope>Everything</filterScope>
    <label>Transcodifiche Arricchimento Dati</label>
    <language>en_US</language>
</ListView>